--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@opentelemetry/api-logs": "^0.52.1",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -21,6 +22,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.46.2",
+    "@tanstack/react-table": "^8.20.5",
     "@vercel/otel": "^1.9.2",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
