--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.428.0",
-    "next": "15.0.3",
+    "next": "14.3.0-canary.43",
     "postcss": "^8.4.41",
-    "react": "19.0.0-rc-5c56b873-20241107",
-    "react-dom": "19.0.0-rc-5c56b873-20241107",
+    "react": "^18",
+    "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.10",
     "tailwindcss-animate": "^1.0.7"
@@ -39,13 +39,13 @@
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
     "@next/eslint-plugin-next": "15.0.3",
-    "@types/node": "^22.4.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@vercel/style-guide": "^6.0.0",
     "babel-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
-    "eslint": "^9.9.0",
-    "eslint-config-next": "15.0.3",
+    "eslint": "9.16.0",
+    "eslint-config-next": "14.3.0-canary.43",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
@@ -54,7 +54,7 @@
     "globals": "^15.9.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.6",
-    "typescript": "^5.5.4",
+    "typescript": "^5",
     "typescript-eslint": "^8.1.0"
   }
 }
