--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "@eslint/compat": "^1.1.1",
     "@next/eslint-plugin-next": "15.0.3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": " 19.0.1",
+    "@types/react-dom": " 19.0.2",
     "@vercel/style-guide": "^6.0.0",
     "babel-plugin-react-compiler": "19.0.0-beta-63b359f-20241101",
     "eslint": "9.16.0",
